# Zag-Engine

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
bindings/: Cargo.toml
bindings/src/: lib.rs
examples/: windowTest.zig
graphicRenderer/: graphRenderer.zig
modules/: Ziglib.zig
modules/core/: color.zig  core.zig  graphics.zig  input.zig  window.zig
modules/core/renderers/: renderer.zig
modules/file/: file.zig
modules/file/txt/: txt.zig
modules/graphicRenderer/: graphics.zig
modules/graphics/: color.zig  window.zig
modules/graphics/renderers/: renderer.zig
modules/inputHandler/: input.zig
modules/window/: winHandle.zig
src/: main.rs  main.zig
window/: winHandle.zig
zaglib/: Cargo.toml
zaglib/src/: window.rs
zig-out/lib/: gameEngine.lib
zig-out/tmp-debug-build/lib/: gameEngine.lib
