[package]
name = "bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.59.0", features = ["Win32","Win32_UI_WindowsAndMessaging","Win32_UI_Input_KeyboardAndMouse","Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "System"] }

[build-dependencies]
windows = "0.59.0"
